Updating to 404e42536dbcfb42b51157a2c49fab5ca1b7e5f9.

--- a/course1.html
+++ b/course1.html
@@ -47,6 +47,8 @@
 <li>Basic analytics (through google analytics)</li>
 
 <li>Deploying site to github pages</li>
+
+<li>Familiarity with the command line</li>
 </ul>
 
 <h2 id="sessions">Sessions</h2>
