Updating to 404e42536dbcfb42b51157a2c49fab5ca1b7e5f9.

--- a/c1prep/index.html
+++ b/c1prep/index.html
@@ -56,6 +56,10 @@
 		
 	
 		
+		<li><a href="#4_ruby_git" data-toggle="tab">Ruby and Git </a></li>
+		
+	
+		
 		<li><a href="#5_reading" data-toggle="tab">Preparation exercises </a></li>
 		
 	
@@ -154,6 +158,52 @@
 
 <p>Sign up for a GitHub account at <a href='https://github.com/'>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</p>
 
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="4_ruby_git">
+	
+
+		<h2>Ruby and Git</h2>
+		
+<p>In order to save to github you’ll need a program called git on your laptop. To make git easier we’ll be using a program called gitgit. To run gitgit you need ruby installed, so in this step we’ll install that too.</p>
+
+<h3 id="on_windows">On Windows</h3>
+
+<p>On Windows the guys at <a href="http://railsinstaller.org/en">Rails Installer</a> have put together a single package that contains both ruby and git. We’re going to use that to get both on your laptop.</p>
+<div class='exercise alert alert-info'><strong>Task:</strong>
+<p>If you are on Windows:</p>
+
+<ul>
+<li>Download and install <a href='http://railsinstaller.org/en'>Rails Installer</a></li>
+</ul>
+</div>
+<h3 id="on_a_mac">On a Mac</h3>
+
+<p>Macs come with ruby already installed, so you don’t have to worry about getting ruby!</p>
+
+<p>To install git we’re going to use a tool called <a href="http://brew.sh/">Homebrew</a>, which helps install open source software to a mac.</p>
+<div class='exercise alert alert-info'><strong>Task:</strong>
+<ol>
+<li>
+<p>Open <code>Terminal</code>.</p>
+</li>
+
+<li>
+<p>Follow the installation instructions on the <a href='http://brew.sh/'>Homebrew site</a>. It will ask you to copy and paste something like</p>
+
+<pre><code> ruby -e &amp;quot;$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)&amp;quot;</code></pre>
+
+<p>into the Terminal. (You should check this, as the precise instructions might have changed.)</p>
+</li>
+
+<li>
+<p>Once homebrew in installed type the following into the Terminal:</p>
+
+<pre><code> brew install git</code></pre>
+</li>
+</ol>
 </div>
 	</div>
 
