Updating to 404e42536dbcfb42b51157a2c49fab5ca1b7e5f9.

--- a/c1prep/index.html
+++ b/c1prep/index.html
@@ -193,7 +193,9 @@
 <li>
 <p>Follow the installation instructions on the <a href='http://brew.sh/'>Homebrew site</a>. It will ask you to copy and paste something like</p>
 
-<pre><code> ruby -e &amp;quot;$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)&amp;quot;</code></pre>
+<pre><code> ```
+ ruby -e &amp;quot;$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)&amp;quot;
+ ```</code></pre>
 
 <p>into the Terminal. (You should check this, as the precise instructions might have changed.)</p>
 </li>
