--- a/c1prep/index.html
+++ b/c1prep/index.html
@@ -191,13 +191,7 @@
 </li>
 
 <li>
-<p>Follow the installation instructions on the <a href='http://brew.sh/'>Homebrew site</a>. It will ask you to copy and paste something like</p>
-
-<pre><code> ```
- ruby -e &amp;quot;$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)&amp;quot;
- ```</code></pre>
-
-<p>into the Terminal. (You should check this, as the precise instructions might have changed.)</p>
+<p>Follow the installation instructions on the <a href='http://brew.sh/'>Homebrew site</a>. It will ask you to copy and paste something like <code>ruby -e &amp;quot;$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)&amp;quot;</code> into the Terminal. (You should check this, as the precise instructions might have changed.)</p>
 </li>
 
 <li>
