Updating to 404e42536dbcfb42b51157a2c49fab5ca1b7e5f9.

--- a/c1prep/index.html
+++ b/c1prep/index.html
@@ -186,14 +186,17 @@
 <p>To install git we’re going to use a tool called <a href="http://brew.sh/">Homebrew</a>, which helps install open source software to a mac.</p>
 <div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
-<li>
-<p>Open <code>Terminal</code>.</p>
-</li>
+<li>Open <code>Terminal</code>.</li>
 
-<li>
-<p>Follow the installation instructions on the <a href='http://brew.sh/'>Homebrew site</a>. It will ask you to copy and paste something like <code>ruby -e &amp;quot;$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)&amp;quot;</code> into the Terminal. (You should check this, as the precise instructions might have changed.)</p>
-</li>
+<li>Follow the installation instructions on the <a href='http://brew.sh/'>Homebrew site</a>. It will ask you to copy and paste something like</li>
+</ol>
+<pre><code>
+        ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+        </code></pre>
+<pre><code>into the Terminal. (You should check this, as the precise
+instructions  might have changed.)</code></pre>
 
+<ol>
 <li>
 <p>Once homebrew in installed type the following into the Terminal:</p>
 
