Updating to 404e42536dbcfb42b51157a2c49fab5ca1b7e5f9.

--- a/c1prep/index.html
+++ b/c1prep/index.html
@@ -185,24 +185,17 @@
 
 <p>To install git we’re going to use a tool called <a href="http://brew.sh/">Homebrew</a>, which helps install open source software to a mac.</p>
 <div class='exercise alert alert-info'><strong>Task:</strong>
-<ol>
+<ul>
 <li>Open <code>Terminal</code>.</li>
 
 <li>Follow the installation instructions on the <a href='http://brew.sh/'>Homebrew site</a>. It will ask you to copy and paste something like</li>
-</ol>
+</ul>
 <pre><code>
-        ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
-        </code></pre>
-<pre><code>into the Terminal. (You should check this, as the precise
-instructions  might have changed.)</code></pre>
+ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+</code></pre>
+<p>into the Terminal. (You should check this, as the precise instructions might have changed.) * Once homebrew in installed type the following into the Terminal:</p>
 
-<ol>
-<li>
-<p>Once homebrew in installed type the following into the Terminal:</p>
-
-<pre><code> brew install git</code></pre>
-</li>
-</ol>
+<pre><code>    brew install git</code></pre>
 </div>
 	</div>
 
