Updating to 404e42536dbcfb42b51157a2c49fab5ca1b7e5f9.

--- a/c1prep/index.html
+++ b/c1prep/index.html
@@ -193,9 +193,15 @@
 <pre><code>
 ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 </code></pre>
-<p>into the Terminal. (You should check this, as the precise instructions might have changed.) * Once homebrew in installed type the following into the Terminal:</p>
+<p>into the Terminal. (You should check this, as the precise instructions might have changed.)</p>
 
-<pre><code>    brew install git</code></pre>
+<ul>
+<li>
+<p>Once homebrew in installed type the following into the Terminal:</p>
+
+<pre><code>  brew install git</code></pre>
+</li>
+</ul>
 </div>
 	</div>
 
