Updating to 404e42536dbcfb42b51157a2c49fab5ca1b7e5f9.

--- a/c1prep/index.html
+++ b/c1prep/index.html
@@ -186,7 +186,7 @@
 <p>To install git we’re going to use a tool called <a href="http://brew.sh/">Homebrew</a>, which helps install open source software to a mac.</p>
 <div class='exercise alert alert-info'><strong>Task:</strong>
 <ul>
-<li>Open <code>Terminal</code>.</li>
+<li>Open <code>Terminal</code> (Applications &gt; Utilities &gt; Terminal).</li>
 
 <li>Follow the installation instructions on the <a href='http://brew.sh/'>Homebrew site</a>. It will ask you to copy and paste something like</li>
 </ul>
