--- a/c1s3/index.html
+++ b/c1s3/index.html
@@ -319,10 +319,12 @@ as suggested in the <code>CSS / Overview</code> section of the <a href='http://g
 <span class='nt'>&lt;/div&gt;</span>
 </code></pre></div>
 <p>The number after the <code>col-sm-</code> determines how many of the 12 grid columns that page column takes up. The <code>sm</code> bit determines the width at which the columns will collapse on top of each other (which is useful when viewing your site on a phone). For more information see the <a href="http://getbootstrap.com/css/#grid">Grid system docs</a>.</p>
-<div class='exercise alert alert-info'><strong>Task:</strong>
-<pre><code>1. Add a `div class=&amp;#39;container&amp;#39;` around the page content.  
-2. Create a row at the top of the page, with two columns, with the left twice as wide as the right. Put the `h1` in the left column and the `img src=&amp;#39;images/sandwich.png&amp;#39;` on the right.  
-3. Create a row with three equal colums to hold each of &amp;#39;The Buzz&amp;#39; `div`s.</code></pre>
+<div class='exercise alert alert-info'><strong>Task:</strong> 
+<ul>
+<li>Add a <code>div class='container'</code> around the page content.</li>
+<li>Create a row at the top of the page, with two columns, with the left twice as wide as the right. Put the <code>h1</code> in the left column and the <code>img src='images/sandwich.png'</code> on the right.  </li>
+<li>Create a row with three equal colums to hold each of 'The Buzz' <code>div</code>s.</li>
+</ul>
 </div>
 	</div>
 
