Updating to 74ea4dca3fc4381ee8cb5c42506aecd4fa12f0b9.

--- a/c1s3/index.html
+++ b/c1s3/index.html
@@ -388,7 +388,7 @@ as suggested in the <code>CSS / Overview</code> section of the <a href='http://g
 <strong>Warning</strong>: Bootstrap has been designed and heavily tested for good cross-browser compatibility. Unless you know what you're doing or have a lot of time, it's probably best to stick with their layout and tweak small things e.g. fonts and colours. Just because it looks great in your browser doesn't mean it will look great in everyone's!
 </div>
 <p>If you’re going to modify Bootstrap <strong>don’t touch the Bootstrap files</strong>. Instead create a new css file of your own to overwrite anything you don’t want. This means when a new version of Bootstrap comes out you can upgrade by dragging the new version over the top of the old, without losing any modifications.</p>
-<div class='exercise alert alert-info'><strong>Task:</strong>   
+<div class='exercise alert alert-info'><strong>Task:</strong> 
 
 <ol>
 <li>Create a file called <code>main.css</code> and write the following CSS:</li>
@@ -434,7 +434,7 @@ Change the background of the <code>jumbotron</code> to be the image <code>fruit-
 </li>
 
 <li>
-This doesn&#39;t look quite right. The problem is that the jumbotron is it is inside the <code>div class=&amp;#39;container&amp;#39;</code>. You can change this by moving it inside:
+This doesn&#39;t look quite right. The problem is that the jumbotron is it is inside the <code>div class='container'</code>. You can change this by moving it inside:
 
 <div class='highlight'><pre><code class='html'><span class='nt'>&lt;div</span> <span class='na'>class=</span><span class='s'>&quot;jumbotron&quot;</span><span class='nt'>&gt;</span>
   <span class='nt'>&lt;div</span> <span class='na'>class=</span><span class='s'>&quot;container&quot;</span><span class='nt'>&gt;</span>
@@ -443,7 +443,7 @@ This doesn&#39;t look quite right. The problem is that the jumbotron is it is in
 <span class='nt'>&lt;/div&gt;</span>
 </code></pre></div>
 
-Similarly you will now need to create new <code>container</code>s inside the <code>div id=&amp;#39;buzz&amp;#39;</code> and <code>div id=&amp;#39;mission&amp;#39;</code>.
+Similarly you will now need to create new <code>container</code>s inside the <code>div id='buzz'</code> and <code>div id='mission'</code>.
 </li>
 <li>
 Change the background color of the <code>mission</code> section to <code>rgba(32, 35, 41, 0.9)</code> and the font colour to <code>#ddd</code>
