Updating to 58f7b7960da2a5cd266e73074a84c1b2dbf9b457.

--- a/c1s3/index.html
+++ b/c1s3/index.html
@@ -372,7 +372,7 @@ as suggested in the <code>CSS / Overview</code> section of the <a href='http://g
 <ol>
 <li>Make the images in &#39;The Buzz&#39; round, by adding the <code>img-circle</code> class.</li>
 
-<li>You can center the image by adding the <a href='http://getbootstrap.com/css/#helper-classes-center'>helper class</a> <code>center-block</code>.</li>
+<li>You can center the image by adding the <a href='http://getbootstrap.com/css/#type-alignment'>alignment class</a> <code>text-center</code>.</li>
 
 <li>Change the main sandwich image into a <code>img-responsive</code>, as described in the <a href='http://getbootstrap.com/css/#overview-responsive-images'>responsive images section</a>. Try resizing your browser and see how it changes size.</li>
 </ol>
