--- a/c1s3/index.html
+++ b/c1s3/index.html
@@ -40,11 +40,7 @@
 <ul class="nav nav-tabs" id="myTab">
 	
 		
-		<li class="active"><a href="#0_recap" data-toggle="tab">Recap from last time </a></li>
-		
-	
-		
-		<li><a href="#1_why_is_css_hard" data-toggle="tab">What's hard about CSS? </a></li>
+		<li class="active"><a href="#1_why_is_css_hard" data-toggle="tab">What's hard about CSS? </a></li>
 		
 	
 		
@@ -72,67 +68,7 @@
 <div class="tab-content">
 
 	
-	<div class="tab-pane active" id="0_recap">
-	
-
-		<h2>Recap from last time</h2>
-		
-<h3 id="before_you_start_updating_gitgit">Before you start: updating gitgit</h3>
-
-<p>There have been some updates and improvements to gitgit! To get these improvements open the command line and run:</p>
-
-<pre><code>gem update gitgit</code></pre>
-
-<p>To check it worked run</p>
-
-<pre><code>gitgit version</code></pre>
-
-<p>it should say ‘0.0.5’ (or higher).</p>
-
-<h3 id="before_you_start_verifying_github_email_address">Before you start: verifying github email address</h3>
-
-<p>Today we’re going to be putting up your first site using <a href="https://pages.github.com/">GitHub Pages</a> - a free hosting solution provided by GitHub.</p>
-
-<p>In order for this to work you need to have <strong>verified your email address with GitHub</strong>.</p>
-<div class='exercise alert alert-info'><strong>Task:</strong> 
-<ol>
-  <li>Log into GitHub.</li>
-  <li>If you see a warning at the top that you haven't verified your
-email address, follow the instructions to do that now.</li>
-  <li>If not, you're good to go!</li>
-</ol>
-</div>
-<h3 id="review_exercise">Review exercise</h3>
-<div class='exercise alert alert-info'><strong>Task:</strong> 
-<ol>
-  <li>Open the comand line</li>
-  <li>Navigate to your 'first_site' folder (cd/ls)</li>
-  <li>Open 'first_site/index.html' in Sublime Text</li>
-  <li>Make a change to the file</li>
-  <li>Save the changes and push to github ("gitgit save", "gitgit
-push")</li>
-  <li>Log into github and check you can see your changes</li>
-</ol>
-
-</div>
-<h3 id="something_new_publishing_site_using_github_pages">Something new: publishing site using GitHub pages</h3>
-
-<p>You’re now going to publish your ‘first_site’ using <a href="https://pages.github.com/">GitHub Pages</a>.</p>
-
-<p>To do this you need to push your website up to a branch called ‘gh-pages’. You don’t know about branches yet, but you can see them on github. Right now you’ll just see a single branch called ‘master’.</p>
-
-<p>You don’t actually need to understand anything about branches at the moment, as gitgit makes it really easy to publish as a github page. Just run</p>
-
-<pre><code>gitgit publish</code></pre>
-
-<p>When you go to github you should now see a ‘gh-pages’ option in the branches dropdown.</p>
-
-<p>The ‘gh-pages’ branch is a signal to github that you want your code to be deployed as a website. You can find the url of your website by looking in your repository settings on GitHub.</p>
-
-	</div>
-
-	
-	<div class="tab-pane " id="1_why_is_css_hard">
+	<div class="tab-pane active" id="1_why_is_css_hard">
 	
 
 		<h2>What's hard about CSS?</h2>
@@ -243,7 +179,9 @@ push")</li>
 
 
 <ol>
-<li>Clone down the repository for the <a href='https://github.com/code61/bootstrap_exercise.git'>bootstrap exercise</a> <strong>into your coding_course folder</strong>: git clone https://github.com/code61/bootstrap_exercise.git</li>
+<li>
+Go to the github repository for the <a href='https://github.com/code61/bootstrap_exercise.git'>bootstrap exercise</a>. Download the code into your <code>coding_course</code> folder (by clicking &#39;Download ZIP&#39; in the bottom right).
+</li>
 <li>
 Open <code>bootstrap_exercise/index.html</code> in your browser.
 </li>
