--- a/c1s1/index.html
+++ b/c1s1/index.html
@@ -56,10 +56,6 @@
 		
 	
 		
-		<li><a href="#4_command_line" data-toggle="tab">Meet the Command Line </a></li>
-		
-	
-		
 		<li><a href="#4_first_page" data-toggle="tab">Creating an HTML page </a></li>
 		
 	
@@ -281,7 +277,7 @@
 
 <p>When we type the URL into the address bar a request is sent over the internet and some information is returned to us.</p>
 
-<p>The protocol describes how the information is transmitted. Other possibilities include <code>https</code> for secured communication, <code>ftp</code> for file transfer and <code>git</code> which we’ll learn about later.</p>
+<p>The protocol describes how the information is transmitted. Other possibilities include <code>https</code> for secured communication, <code>ftp</code> for file transfer and <code>git</code> which you’ll learn about later.</p>
 
 <p>The host describes where the information should come from and the path tells that location precisely what information to send.</p>
 
@@ -292,7 +288,7 @@
 <h3 id="dns">DNS</h3>
 
 <p>IP addresses are a sequence of numbers and ‘.’s such as <code>212.58.244.67</code>. These aren’t very easy to remember. Instead the internet works on a domain name system, that matches domain names such as <code>bbc.co.uk</code> to IP addresses.</p>
-<div class='exercise alert alert-info'><strong>Task:</strong>   
+<div class='exercise alert alert-info'><strong>Task:</strong> 
 
 <p>Type <code>212.58.244.67</code> into your browser&#39;s address bar. What happens?</p>
 
@@ -315,116 +311,6 @@
 
 <p>Many domain registrars will try to sell you hosting and other site building tools when you buy a domain. It’s important to remember that the domain name is completely separate from the hosting and you don’t need to do them both through the same company - don’t buy anything you’re not going to use.</p>
 
-	</div>
-
-	
-	<div class="tab-pane " id="4_command_line">
-	
-
-		<h2>Meet the Command Line</h2>
-		
-<p>The command line is a way to interact with your computer programmatically. If you are doing any software development you will need to get to grips with using the command line, as many of the programs you will use will be run from the it, instead of by clicking an icon.</p>
-
-<h3 id="opening_the_command_line">Opening the command line</h3>
-
-<ul>
-<li>On a Mac open Terminal (Applications &gt; Terminal)</li>
-
-<li>On Windowns open Command Prompt with Ruby on Rails</li>
-</ul>
-
-<h3 id="moving_around">Moving around</h3>
-
-<p>Note: when giving you instructions for the command line we will precede them with a <code>$</code> to represent the command prompt e.g.</p>
-
-<pre><code>$ some_command</code></pre>
-
-<p><strong>You shouldn’t type the <code>$</code> sign - just the stuff after it.</strong> So for the above instruction you would just type <code>some_command</code> into the command line.</p>
-
-<p>The first thing you will need to get used to is moving around. Start by printing the name of the directory you are in:</p>
-
-<pre><code>$ pwd</code></pre>
-
-<p>Then have a look at what’s in that directory ( <em>list</em> the contents):</p>
-
-<pre><code>$ ls</code></pre>
-
-<p>To move up a directory ( <em>change directory</em> ) do</p>
-
-<pre><code>$ cd ..</code></pre>
-
-<p>To move back into the folder you just left do</p>
-
-<pre><code>$ cd name_of_the_folder</code></pre>
-
-<p>Your commandline will help you: <kbd>tab</kbd> can often be used to auto-complete names of files, the up arrow can be used to cycle through previous commands that you have typed.</p>
-
-<h3 id="creating_a_directory">Creating a directory</h3>
-
-<p>You can do a lot more on the command line than just move around. We’ll be using the command line a lot over the course. For the time being we just need to create a folder:</p>
-
-<pre><code>$ mkdir coding_course</code></pre>
-
-<p>Note: choosing names without spaces makes command line navigation easier.</p>
-<div class='exercise alert alert-info'><strong>Task:</strong>
-<ol>
-<li>
-<p>Open your command line:</p>
-
-<ul>
-<li>On a Mac open Terminal (Applications &gt; Terminal)</li>
-
-<li>On Windowns open Command Prompt with Ruby on Rails</li>
-</ul>
-</li>
-
-<li>
-<p>Find out where you are:</p>
-
-<pre><code> $ pwd</code></pre>
-</li>
-
-<li>
-<p>See what is in the same folder:</p>
-
-<pre><code> $ ls</code></pre>
-</li>
-
-<li>
-<p>If you are on a Mac move into <code>Documents</code>:</p>
-
-<pre><code> $ cd Documents</code></pre>
-</li>
-
-<li>
-<p>Create the folder for the coding course:</p>
-
-<pre><code> $ mkdir coding_course</code></pre>
-</li>
-
-<li>
-<p>Move into that folder:</p>
-
-<pre><code> $ cd coding_course</code></pre>
-</li>
-
-<li>
-<p>Move back up to the folder above</p>
-
-<pre><code> $ cd ..</code></pre>
-</li>
-
-<li>
-<p>Move back into the coding course folder. This time don&#39;t type out coding_course - just type out the first few letters and hit <code>Tab</code>:</p>
-
-<pre><code>$ cd coding_course</code></pre>
-</li>
-
-<li>
-<p>In the Finder (Mac) or My Computer (Windows) find the folder that you just created.</p>
-</li>
-</ol>
-</div>
 	</div>
 
 	
@@ -616,6 +502,8 @@
 <p>Now you will use these ideas to create a richer web page.</p>
 <div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
+<li>Create a folder called <code>coding_course</code> to hold all your work for the course.</li>
+
 <li>Go to the github repository for this session: <a href='https://github.com/code61/learning_html'>https://github.com/code61/learning_html</a></li>
 
 <li>Download the code into your <code>coding_course</code> folder (by clicking &#39;Download ZIP&#39; in the bottom right).</li>
@@ -641,28 +529,6 @@
 <div class='exercise alert alert-info'><strong>Task:</strong> 
 
 <p>Finish the HTML exercise from the last section.</p>
-
-</div>
-<h3 id="buy_a_domain_name">Buy a domain name</h3>
-
-<p>Your domain name will be used to point towards your personal website for the course - it’s up to you exactly what this will be about. You might want to use this opportunity to create a basic ‘personal landing page’ saying a bit about yourself and where to find more information. Or you might want to put up a blog. Alternatively if you want you can put up a page about something you are interested in (or <a href="http://jamfly.info/">your dog</a>). You will need to pick a domain name accordingly!</p>
-
-<p>To buy a domain name you need to visit a domain registrar. Examples are:</p>
-
-<ul>
-<li><a href="http://www.123-reg.co.uk/">123-reg</a></li>
-
-<li><a href="http://www.godaddy.com/">Godaddy</a></li>
-
-<li><a href="http://www.namecheap.com/">Namecheap</a></li>
-
-<li><a href="http://www.dot.tk/en/index.html?lang=en">dot.tk</a> (.tk domains are completely free!)</li>
-</ul>
-
-<p>There probably won’t be a huge difference in price between these sites. You might be able to find a special offer on one of them if you shop around a bit though. Ultimately the domain you choose isn’t that important for the course - the whole point is to practice pointing a domain name towards a server.</p>
-<div class='exercise alert alert-info'><strong>Task:</strong> 
-
-<p>Buy your own domain name.</p>
 
 </div>
 <h3 id="preparation_for_next_time">Preparation for next time</h3>
