Updating to df04dfefcad493e41743c9888700f5483fc3a315.

--- a/c1s2/index.html
+++ b/c1s2/index.html
@@ -398,7 +398,7 @@
 <div class='exercise alert alert-info'><strong>Task:</strong> 
 <ol>
 <li>Complete the whole of Project 3 on the [General Assembly Dash](https://dash.generalassemb.ly/projects) site.</li>
-<li>Make some changes to your `first_site` based on what you've learnt. Make sure you add them to git, push them to github and check you can see them online.</li>
+<li>Make some changes to your `first_site` based on what you've learnt. Update the online version of your site, by re-uploading to BitBucket.</li>
 <li>(Optional) Do the projects from the [Codecademy Web Track](http://www.codecademy.com/tracks/web) Sections 7, 8 &amp; 9.</li>
 <li>(Optional) Read [this article](https://www.inkling.com/read/dreamweaver-cs6-missing-manual-david-sawyer-mcfarland-1st/chapter-4/understanding-links) about absolute vs. relative links.</li>
 </ol>
